# rivulet

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  i18n.rs  main.rs  opml.rs
src/app/: actions.rs  events.rs  input.rs  mod.rs  state.rs
src/app/input/: keyboard.rs  mod.rs  modals.rs  mouse.rs
src/fetch/: client.rs  discovery.rs  mod.rs  parser.rs  scheduler.rs
src/store/: mod.rs  models.rs  repo.rs  schema.rs
src/ui/: layout.rs  mod.rs  rich_text.rs  theme.rs  widgets.rs
src/util/: html.rs  mod.rs  open.rs  time.rs
