[package]
name = "rivulet"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "A terminal RSS reader with 3-panel layout, categories, rich preview, and OPML support"
repository = "https://github.com/elpeix/rivulet"
readme = "README.md"
keywords = ["rss", "tui", "terminal", "reader", "feed"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.39", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "http2",
  "gzip",
] }
bytes = "1.6"
feed-rs = "2.3.1"
rusqlite = { version = "0.38", features = ["bundled"] }
html2text = "0.16"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
dirs = "6.0.0"
unicode-width = "0.2"
url = "2.5"
roxmltree = "0.21"
log = "0.4"
simplelog = "0.12"
